syntax = "proto3";

package cron_client;

option go_package = "./v1;v1";

import "validate/validate.proto";
import "google/protobuf/struct.proto";


message CancelExecTaskRequest{
  string uuid = 1;
}

message ExecTaskRequest{
  uint32 id = 1;
  string type = 2;
  string value = 3;
  uint32 expect_code = 4;
  uint32 retry_count = 5;
  uint32 retry_wait_time = 6;
  uint32 max_exec_time = 7;
  string uuid = 8;
}

message ExecTaskReply{
  string type = 1;
  string content = 2;
  uint32 time = 3;
}